tests/ui/unsafe/unsafe_op_in_unsafe_fn/in_2024_compatibility.stderr
error: call to unsafe function `unsf` is unsafe and requires unsafe block (error E0133)
  --> $DIR/in_2024_compatibility.rs:7:5
   |
LL |     unsf();
   |     ^^^^^^ call to unsafe function
   |
   = note: for more information, see issue #71668 <https://github.com/rust-lang/rust/issues/71668>
   = note: consult the function's documentation for information on how to avoid undefined behavior
note: an unsafe function restricts its caller, but its body is safe by default
  --> $DIR/in_2024_compatibility.rs:6:1
   |
LL | unsafe fn foo() {
   | ^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/in_2024_compatibility.rs:1:9
   |
LL | #![deny(rust_2024_compatibility)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(unsafe_op_in_unsafe_fn)]` implied by `#[deny(rust_2024_compatibility)]`

error: aborting due to 1 previous error

